package language;

public class InterpreterFacade implements Executor{

    private ExecutorFactory factory;
    private Context context;
    private Node programNode;

    public InterpreterFacade(ExecutorFactory factory) {
        this.factory = factory;
    }

    public boolean parse(String text){
        boolean ok = true;
        this.context = new Context(text);
        this.context.setExecutorFactory(factory);
        this.programNode = new ProgramNode();
        try {
            programNode.parse(context);
        } catch (ParseException e) {
            e.printStackTrace();
            ok = false;
        }
        return ok;
    }

    //parseとexecuteの分離
    @Override
    public void execute() throws ExecuteException {
        try{
            programNode.execute();
        } catch (ExecuteException e) {
            e.printStackTrace();
        }
    }
    
}
